<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:paddingTop="@dimen/welcome_intro_fragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/introimage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:text="@string/app_name_formatted"
        android:id="@+id/wif_appname"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/welcome_intro_fragment"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32dp"
        android:textAlignment="center"
        android:text="@string/welcome_intro_fragment"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/welcome_intro_fragment"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/wif_next"
            android:textColor="@color/white"
            android:background="@drawable/dark_pink_button"
            android:layout_marginRight="5dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:id="@+id/wif_skip"
            android:textColor="@color/white"
            android:background="@drawable/light_pink_button"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>
</LinearLayout>